<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:id="@+id/ReporterActivity"
    tools:context="neckbeardhackers.pcqueue.controllers.ReporterActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <!-- Application bar -->
        <include layout="@layout/applicationbar"/>

        <include layout="@layout/no_internet_bar"/>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/reporter_restaurantName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="33dp"
                android:text="Restaurant Name"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="35dp"
                android:textColor="@color/textColorPrimary"
                android:fontFamily="sans-serif-light"/>

            <TextView
                android:id="@+id/peopleQuestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/reporter_restaurantName"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="12dp"
                android:text="How many people are in line?"
                android:textColor="@color/textColorPrimary"
                android:textSize="20dp"
                android:fontFamily="sans-serif-light"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <!-- Spinner: Select how many people are in queue -->
            <Spinner
                android:id="@+id/people_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_below="@+id/peopleQuestion"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:layout_centerHorizontal="true"
                android:spinnerMode="dialog" />

            <Button
                android:id="@+id/reporter_updateButton"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="81dp"
                android:background="@color/buttonColorPrimary"
                android:drawableLeft="@drawable/ic_sync_white"
                android:paddingLeft="12dp"
                android:text="Report queue length"
                android:textColor="@color/buttonTextColorPrimary" />
            <!-- TODO: Add sync icon -->
            <!--android:drawableLeft="@drawable/ic_sync"-->





        </RelativeLayout>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>