...
                android:text="– as of last report"
                android:textSize="17sp"
                android:textColor="#A0A0A0" />
            </LinearLayout>

            <Button
                android:id="@+id/updateButton"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:layout_alignStart="@+id/restaurantName"
                android:background="@android:color/transparent"
                android:text="Report Queue Length"
...
